--- a/theme.conf
+++ b/theme.conf
@@ -1,21 +1,21 @@
-background #0c1115
-foreground #bd2523
-cursor #6c6c6c
-selection_background #bd2523
-color0 #2e343c
-color8 #404a55
-color1 #bd0f2f
-color9 #bd0f2f
-color6 #35a770
-color14 #49e998
-color3 #fb9435
-color11 #fddf6e
-color4 #35a770
-color12 #49e998
-color5 #bd2523
-color13 #fb9435
-color2 #778397
-color10 #a0b6d3
-color7 #ffffff
-color15 #ffffff
-selection_foreground #0c1115
+background            #0e0c15
+foreground            #dbd0b9
+cursor                #bbbbbb
+selection_background  #f3e0b8
+color0                #08002e
+color8                #331d4c
+color1                #64002c
+color9                #cf2062
+color2                #5d731a
+color10               #b3ce58
+color3                #cd751c
+color11               #fac357
+color4                #1d6da1
+color12               #40a4cf
+color5 		            #bd2523
+color13 	            #ea4727
+color6                #42a38c
+color14               #62caa8
+color7                #f3e0b8
+color15               #fff5db
+selection_foreground #0e0c15
